--- a/src/pages/posts/boj1891.md
+++ b/src/pages/posts/boj1891.md
@@ -1,6 +1,6 @@
 ---
 layout: ../../layouts/MarkdownPostLayout.astro
-title: "boj1891"
+title: "BOJ1891"
 pubDate: 2023-07-11
 description: "no.1891 사분면"
 author: eomchanu
@@ -118,4 +118,5 @@ tags: ["boj", "algorithm"]
 
     }
     
+
 ```
